// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BreadcrumbHeader renders with a single route 1`] = `

<div class="flex items-center">
  <button class="hover:text-foreground cursor-default rounded-sm bg-transparent px-2 py-1 text-sm font-medium capitalize transition-colors duration-250 hover:bg-neutral-200 dark:hover:bg-neutral-800 text-foreground">
    settings
  </button>
</div>

`;

exports[`BreadcrumbHeader renders with multiple routes 1`] = `

<div class="flex items-center">
  <button class="text-muted-foreground hover:text-foreground cursor-default rounded-sm bg-transparent px-2 py-1 text-sm font-medium capitalize transition-colors duration-250 hover:bg-neutral-200 dark:hover:bg-neutral-800">
    settings
  </button>
  <gui-chevron-right-icon classname="text-muted-foreground mx-0.5 size-4">
  </gui-chevron-right-icon>
  <button class="hover:text-foreground cursor-default rounded-sm bg-transparent px-2 py-1 text-sm font-medium capitalize transition-colors duration-250 hover:bg-neutral-200 dark:hover:bg-neutral-800 text-foreground">
    general
  </button>
</div>

`;
